Actions
Bug #9386
closedkadmin: this statement may fall through
Start date:
2018-03-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
issue found by gcc 7 build:
ipropd_svc.c: In function 'iprop_full_resync_1': ipropd_svc.c:369:6: error: this statement may fall through [-Werror=implicit-fallthrough=] if (pret == -1) { ^ ipropd_svc.c:380:2: note: here default: /* parent */ ^~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 674a0a218b3be1d0d7af65a4a3ea23fbcc657106
commit 674a0a218b3be1d0d7af65a4a3ea23fbcc657106 Author: Toomas Soome <tsoome@me.com> Date: 2018-04-23T16:15:39.000Z 9386 kadmin: this statement may fall through Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>
Actions