usr/src/cmd/krb5/kadmin/server/ipropd_svc.c
@@ -376,6 +376,8 @@ iprop_full_resync_1(
 					error_message(errno));
 			goto out;
 		}
+		/* NOTREACHED */
+		break;
 
 	default: /* parent */
 		ret.ret = UPDATE_OK;
